--- a/L01_SourceControl/SourceControl.html
+++ b/L01_SourceControl/SourceControl.html
@@ -7,6 +7,8 @@
     <title>Source Control</title>
 </head>
 <body>
-    Hello World.
+    Hello World.<br>
+    <img src="pic.jpg"></img><br>
+    Beschreibender Text.
 </body>
 </html>
