--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -2,7 +2,9 @@
 <meta http-equiv="content-type" content="text/html; charset=windows-1252"><style>td {vertical-align:top; font-family:arial; font-size:small; background:#eeeeee}</style>
 </head><body><table width="100%" height="100%" cellspacing="0" cellpadding="2" border="0">
   <tbody><tr><td width="200">
-	<a href="https://webuser.hs-furtwangen.de/~del/Softwaredesign/Steckbrief/link" target="_blank">Hausaufgabe Nr.0 (Datum)</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign" target="_blank">GitHub Repository</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/tree/master/L01_SourceControl" target="_blank">Hausaufgabe Nr.0 (08.10.2019)</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/tree/master/L02_ProgrammierenInC%23_1" target="_blank">Hausaufgabe Nr.0 (08.10.2019)</a><br>
 	</td>
     <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
   </tr>
