--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -3,8 +3,9 @@
 </head><body><table width="100%" height="100%" cellspacing="0" cellpadding="2" border="0">
   <tbody><tr><td width="200">
   <a href="https://github.com/keckluis/Softwaredesign" target="_blank">GitHub Repository</a><br>
-  <a href="https://github.com/keckluis/Softwaredesign/tree/master/L01_SourceControl" target="_blank">Hausaufgabe Nr.01 (08.10.2019)</a><br>
-  <a href="https://github.com/keckluis/Softwaredesign/tree/master/L02_ProgrammierenInC%23_1" target="_blank">Hausaufgabe Nr.02 (08.10.2019)</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/tree/master/L01_SourceControl" target="_blank">L01_SourceControl (08.10.2019)</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/blob/master/L02_ProgrammierenInC%23_1/L02.cs" target="_blank">L02_ProgrammierenInC#_1 (08.10.2019)</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A1_Buchstabendreher/Buchstabendreher.cs" target="_blank">A1_Buchstabendreher (11.10.2019)</a><br>
 	</td>
     <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
   </tr>
