added A1 to Steckbrief

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,6 +7,7 @@
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/L02_ProgrammierenInC%23_1/L02.cs" target="_blank">L02_ProgrammierenInC#_1</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/A1_Buchstabendreher/Buchstabendreher.cs" target="_blank">A1_Buchstabendreher</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/L03_Debugging" target="_blank">L03_Debugging</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A2_Zahlensysteme/Zahlensysteme.cs" target="_blank">A2_Zahlensysteme</a><br>
 	</td>
     <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
   </tr>
