--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -8,6 +8,7 @@
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/A1_Buchstabendreher/Buchstabendreher.cs" target="_blank">A1_Buchstabendreher</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/L03_Debugging" target="_blank">L03_Debugging</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/A2_Zahlensysteme/Zahlensysteme.cs" target="_blank">A2_Zahlensysteme</a><br>
+  <a href="https://raw.githubusercontent.com/keckluis/Softwaredesign/master/L06_UML/Spülen_UML.jpg" target="_blank">L06_UML</a><br>
 	</td>
     <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
   </tr>
