added A04 to Steckbrief

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -5,12 +5,13 @@
   <a href="https://github.com/keckluis/Softwaredesign" target="_blank">GitHub Repository</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/L01_SourceControl" target="_blank">L01_SourceControl</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/L02_ProgrammierenInC%23_1/L02.cs" target="_blank">L02_ProgrammierenInC#_1</a><br>
-  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A1_Buchstabendreher/Buchstabendreher.cs" target="_blank">A01_Buchstabendreher</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/L03_Debugging" target="_blank">L03_Debugging</a><br>
-  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A2_Zahlensysteme/Zahlensysteme.cs" target="_blank">A02_Zahlensysteme</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/L05_ProgrammierenInC%23_2/Person.cs" target="_blank">L05_ProgrammierenInC#_2</a><br>
   <a href="https://raw.githubusercontent.com/keckluis/Softwaredesign/master/L06_UML/Spülen_UML.jpg" target="_blank">L06_UML</a><br>
-  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A03_OXO/OXO.pdf" target="_blank">A03_OXO</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A1_Buchstabendreher/Buchstabendreher.cs" target="_blank">A01_Buchstabendreher</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A2_Zahlensysteme/Zahlensysteme.cs" target="_blank">A02_Zahlensysteme</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/tree/master/A03_OXO" target="_blank">A03_OXO</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/tree/master/A04_Quiz" target="_blank">A04_Quiz</a><br>
 	</td>
     <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
   </tr>
