added Quiz 2 to Steckbrief

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,8 @@
   <a href="https://github.com/keckluis/Softwaredesign/blob/master/A2_Zahlensysteme/Zahlensysteme.cs" target="_blank">A02_Zahlensysteme</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/A03_OXO" target="_blank">A03_OXO</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/A04_Quiz" target="_blank">A04_Quiz</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/tree/master/A05_Quiz_2" target="_blank">A05_Quiz_2</a><br>
 	</td>
-    <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
+    <td></td>
   </tr>
 </tbody></table></body></html>
