--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/A03_OXO" target="_blank">A03_OXO</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/A04_Quiz" target="_blank">A04_Quiz</a><br>
   <a href="https://github.com/keckluis/Softwaredesign/tree/master/A05_Quiz_2" target="_blank">A05_Quiz_2</a><br>
+  <a href="https://github.com/keckluis/Softwaredesign/blob/master/A06_Generischer_Baum/TreeNode.cs" target="_blank">A06_Generischer_Baum</a><br>
 	</td>
     <td></td>
   </tr>
